@@ -16,6 +16,32 @@ class TestCoverage < Test::Unit::TestCase
     end
   end
 
+  def test_coverage_snapshot
+    loaded_features = $".dup
+
+    Dir.mktmpdir {|tmp|
+      Dir.chdir(tmp) {
+        File.open("test.rb", "w") do |f|
+          f.puts <<-EOS
+            def coverage_test_method
+              :ok
+            end
+          EOS
+        end
+
+        Coverage.start
+        require tmp + '/test.rb'
+        cov = Coverage.peek_result[tmp + '/test.rb']
+        coverage_test_method
+        cov2 = Coverage.peek_result[tmp + '/test.rb']
+        assert_equal cov[1] + 1, cov2[1]
+        assert_equal cov2, Coverage.result[tmp + '/test.rb']
+      }
+    }
+  ensure
+    $".replace loaded_features
+  end
+
   def test_restarting_coverage
     loaded_features = $".dup
 
