@@ -44,6 +44,10 @@ with all sufficient information, see the ChangeLog file.
  * Base64.urlsafe_decode64: now it accepts not only correctly-padded
    input but also unpadded input.
 
+* ext/coverage/coverage.c
+  * Coverage.peek_result: new method to allow coverage to be captured without
+    stopping the coverage tool.
+
 === Built-in global variables compatibility issues
 
 === C API updates
